# stash

./: .gitignore  Cargo.toml  clippy.toml  justfile  rust-toolchain.toml  rustfmt.toml  stash.db-shm  stash.db-wal
.github/workflows/: ci.yml
.sqlx/: query-1eb572cd19df4b89e217e46d8e597f84050a256328d9000369434e8612e2536c.json  query-35f9fbe1e001253a959d2e771dc1417cbcbcfadce5cebeffad35735b5185d8d2.json  query-68510db048b0e2b3ade8d3f69010a19c7319cde2f4d98ebaea9674ad889b818c.json
crates/stash-core/: Cargo.toml
crates/stash-core/src/: category.rs  error.rs  ids.rs  item.rs  lib.rs  money.rs  sku.rs  stock.rs  warehouse.rs
crates/stash-core/tests/: ids_tests.rs  mod.rs  money_tests.rs  sku_tests.rs  stock_proptest.rs  stock_tests.rs
crates/stash-storage/: Cargo.toml
crates/stash-storage/migrations/: 0001_init.sql  0002_indexes.sql
crates/stash-storage/src/: category_repository.rs  error.rs  item_repository.rs  lib.rs  movement_log_repository.rs  repository.rs  stock_repository.rs  warehouse_repository.rs
crates/stash-storage/src/sqlite/: category_repo.rs  item_repo.rs  mod.rs  movement_log_repo.rs  stock_repo.rs  warehouse_repo.rs
crates/stash-storage/tests/: category_repo_tests.rs  item_repo_tests.rs  movement_log_repo_tests.rs
crates/stash-tui/: Cargo.toml
crates/stash-tui/src/: cli.rs  config.rs  import.rs  logging.rs  main.rs  terminal.rs  theme.rs
crates/stash-tui/src/app/: bridge.rs  mod.rs
crates/stash-tui/src/ui/: add_item_form.rs  category_detail.rs  category_form.rs  category_list.rs  dashboard.rs  item_detail.rs  item_form.rs  item_list.rs  mod.rs  movement_log.rs  popup.rs  settings.rs  sidebar.rs  statusbar.rs  title.rs  warehouse_detail.rs  warehouse_form.rs  warehouse_list.rs
