[workspace]
resolver = "2"
members = [
    "crates/stash-core",
    "crates/stash-storage",
    "crates/stash-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["David Michael II <knowdavidmichael@gmail.com>"]
license = "MIT"
repository = "https://github.com/gettoknowdavid/stash"
rust-version = "1.94.0"

# Centralize dependency versions here once Epic 2+ adds crates,
# so every member references the same version with `dep = { workspace = true }`.
[workspace.dependencies]
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
time = { version = "0.3.51", features = ["serde", "formatting", "parsing", "macros"] }