[package]
name = "stash-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
uuid = { version = "1.23.3", features = ["v4", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", features = ["sqlite", "time", "uuid", "macros"], optional = true }
time = { workspace = true }

[dev-dependencies]
proptest = "1.11.0"
