[package]
name = "stash-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.89"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "uuid", "time", "macros", "derive"] }
stash-core = { path = "../stash-core" }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time"] }
