[package]
name = "stash-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "stash"
path = "src/main.rs"

[dependencies]
stash-core = { path = "../stash-core" }
stash-storage = { path = "../stash-storage" }
anyhow = { workspace = true }
crossterm = "0.29.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time"] }
tui-input = "0.15.3"
ratatui = "0.30.2"
